--- a/_posts/2021-01-12-101-Papers.md
+++ b/_posts/2021-01-12-101-Papers.md
@@ -181,4 +181,12 @@ At training time random pairs of consecutive timesteps are sampled from the trai
 
 They manage to generate realistic looking simulations for a variety of materials and environments.
 
-# 15. 
+# 15. FetchSGD- Communication-Efficient Federated Learning with Sketching ([link](http://proceedings.mlr.press/v119/rothchild20a/rothchild20a.pdf))
+
+In this paper they propose a new method of computing gradient updates in federated learning. The gradients are computed locally on the client as usual but they are compressed using a data structure called Count-Sketch $\mathcal{S}$. It turns out that $\mathcal{S}$ is linear so that $\mathcal{S}(x + y) = \mathcal{S}(x) + \mathcal{S}(x)$ which means that the summed values after Count-Sketch has been applied to gradients is equivalent to applying it after summing all the gradients. Here they say that $\text{topk}\mathcal{S}(g)$ is roughly the same as $\text{topk}\mathcal(g)$. 
+
+An issue with FedAvg the classic approach is that it requires download and upload of the entire model each time. Moreover unlike other compression schemes FetchSGD only involves one communication round with any client. It also does not need to store state locally nor does it need to update all the weights each time. 
+
+Experiments on different tasks and datasets show that it performs better at higher compression levels compared to other algorithms.
+
+
