added mesh paper

--- a/_posts/2021-01-12-101-Papers.md
+++ b/_posts/2021-01-12-101-Papers.md
@@ -181,7 +181,7 @@ At training time random pairs of consecutive timesteps are sampled from the trai
 
 They manage to generate realistic looking simulations for a variety of materials and environments.
 
-# 15. FetchSGD- Communication-Efficient Federated Learning with Sketching ([link](http://proceedings.mlr.press/v119/rothchild20a/rothchild20a.pdf))
+## 15. FetchSGD- Communication-Efficient Federated Learning with Sketching ([link](http://proceedings.mlr.press/v119/rothchild20a/rothchild20a.pdf))
 
 In this paper they propose a new method of computing gradient updates in federated learning. The gradients are computed locally on the client as usual but they are compressed using a data structure called Count-Sketch $\mathcal{S}$. It turns out that $\mathcal{S}$ is linear so that $\mathcal{S}(x + y) = \mathcal{S}(x) + \mathcal{S}(x)$ which means that the summed values after Count-Sketch has been applied to gradients is equivalent to applying it after summing all the gradients. Here they say that $\text{topk}\mathcal{S}(g)$ is roughly the same as $\text{topk}\mathcal(g)$. 
 
@@ -189,7 +189,7 @@ An issue with FedAvg the classic approach is that it requires download and uploa
 
 Experiments on different tasks and datasets show that it performs better at higher compression levels compared to other algorithms.
 
-# 16. Learning Mesh-Based Simulation with Graph Networks ([link](https://arxiv.org/abs/2010.03409v3))
+## 16. Learning Mesh-Based Simulation with Graph Networks ([link](https://arxiv.org/abs/2010.03409v3))
 At each timestep there is a mesh $M_t = G(V, E^M)$. Each node $i$ has a mesh space co-ordinate $\mathbf{u}_i$ and additional dynamical quantities $\mathbf{q}_i$ which are the ones that getting estimated. You can have Eulerian and Lagrangian systems, where the later have an additional coordinate $\mathbf{x}_i$ which describes the dynamical state of the mesh in 3D space.
 
 The graph is a direct mapping from the mesh but in Lagrangan systems it has additional world space edges. In simple terms this seems to mean edges between nodes that are not directly "connected" in a material sense but come close to each other for example positions on opposites sides of a piece of cloth that come near to each other when the cloth is folded but far from each other when connected along the cloth. Other examples include points on two different meshes such as points on a ball that hits the cloth. 
@@ -203,7 +203,9 @@ In addition both the mesh and world edges get the world-space displacement vecto
 
 The processor consists of $L$ blocks, where the blocks are as illustrated below. It looks like you concatenate the input features and then uses an MLP with a residual connection to update the edges and nodes. I think that message passing comes about since you are first updating the edges and then using those to update the nodes. More message passing steps improve MSE but are costly.
 
-![]({{ site.baseurl }}/assets/learning-mesh.jpg)
+<p style="text-align:center">
+<img src="{{ site.baseurl }}/assets/learning-mesh.jpg" style="height:50%; width:50%;">
+</p>
 
 The decoder then predicts various properities $\mathbf{p}_i$ for each node using the node features after the final processor block. The properities are interpreted as higher order derivatives of the node position and the position is estimated via Euler forward integration. Additional properties such as pressure or stress are also predicted. When second order values (e.g. acceleration) are predicted earlier velocity values are also input but using too much history leads to overfitting. 
 
