added paper summary

--- a/_posts/2021-01-12-101-Papers.md
+++ b/_posts/2021-01-12-101-Papers.md
@@ -224,3 +224,23 @@ It generates visually similar predictions for simulations of moving fabric, airf
 - Grid based models need more cells to represent the same simulation but despite that seem to underperform at small scales.
 
 - The improved performance over a particle based method GNS suggests that use of a mesh and message passing seems to be important. However using world-space edges is also appears to be important.
+
+## 17. [GRAF: Generative Radiance Fields for 3D-Aware Image Synthesis]([link](https://arxiv.org/abs/2007.02442))
+- Sample the follows
+    - Parameters of a translation and a rotation matrix from a distribution $\p_\epsilon$. They use a uniform distribution over the upper hemisphere with the camera facing towards the origin and in some cases vary the distance from the origin to the camera. 
+    - A centre location and what they describe as "scale" but seems to be a stride from the image. The centre x-y coordinates are uniformly sampled from across the image domain and the scale is sampled from a continuous uniform distribution between $1$ and $S$. Values are sampled from this continuous space over the image using interpolation.
+    - Latent vectors $\mathbf{z}_s$ and $\mathbf{z}_a$ for object shape and appearance, from a standard normal distribution.  
+- Based on the patch location, the transformation matrices and the camera intrinsics the 3D camera rays corresponding to any point in the patch can be determined. To predict the colour and volume density at a point $p_i$ in the patch do the following:
+    - Sample $N$ 3D points $\mathbf{x}_i$ along the ray $\mathbf{d}_i$ that corresponds to $p_i$.
+    - Encode these points using a positional encoding: $\gamma(\mahtbf{x_i})$
+    - Concatenate with the shape latent $\mathbf{z}_s$ and input to an MLP to predict an encoding $\mathbf{h}$
+    - Using $\mathbf{h}$ by itself to predict the volume density $\sigma$
+    - Encode the direction: $\gamma(\mahtbf{d_i})$
+    - Concatenate with $\mathbf{h}$ and the appearance latent $\mathbf{z}_a$ to predict the colour $\mathbf{c}$
+- So far the key differences from NeRF are that you have a couple of additional stochastic inputs and you also restrict the input points to lie within an patch as opposed to anywhere within the locations the comprise the training set. A further difference from NeRF is how the predictions are supervised. Instead of using ground truth colour and volume density as targets, they train discriminator which receives as input a real image patch from the same patch sampling distribution and predicts whether it is real or fake. It would appear that this patch can come from any valid location in a ground truth image and can have a different stride compared to the input patch.
+- Key features and results:  
+    - The model gets a better (lower) FID on various datasets compared to the voxel based GAN approaches PlatonicGAN and HoloGAN. 
+    - It also does well at higher resolutions including when not trained with images at those resolutions compared to these models, which are also prevented due to by their voxel based representation from generating very high resolutions. 
+    - Qualitatively it can be seen that the model is good at disentangled different attributes like pose, shape and appearance - changing the pose seems to result in images in which the same object seems to be present only oriented differently whereas the other models also change the appearance of the object and / or have artifacts. 
+    - Moreover varying the appearance and shape latents one at a time results in images where the only the appearance or the shape change. 
+    - A lower 3D reconstruction loss is further suggestive of multiview consistency. 
