--- a/_posts/cs330/_posts/2020-02-17-CS330-Week2.md
+++ b/_posts/cs330/_posts/2020-02-17-CS330-Week2.md
@@ -17,7 +17,7 @@ categories: rc cs330
     - Earlier they note that the goal is:
         > [T]o find model parameters that are *sensitive* to changes in the task such that small changes in the parameters will produce large improvements on the loss function of any task drawn from $P(\mathcal{T})$. 
     - I get that the weights need to be such that when you fine-tune them just a bit on a new task the performance improves a lot. 
-- Implementation details for sine experiment
+- Implementation details for sine experiment (Colab notebook [here](https://colab.research.google.com/drive/1K3P1l-MNA-8pJ5RZbdgYbwRBszqT-cfk?usp=sharing))
     - Amplitude [0.1, 5.]
     - Phase [0, $pi$]
     - x [-5., 5.]
