--- a/_posts/2020-12-07-RC-Week-4.md
+++ b/_posts/2020-12-07-RC-Week-4.md
@@ -33,7 +33,7 @@ These are tasks that  I can finish by 12/12/2020 and how confident I am that I w
 <br>
 <br>
 #### Studies
-- [ ] Study up to the end of chapter 3 of the RL book, 3/5
+- [x] Study up to the end of chapter 3 of the RL book, 3/5
 - [ ] Finish studies on eigenvalues and eigenvectors, 3/5
 - [ ] Finish studies on wavelets, 3/5
 - [ ] Part 1 of Depth First Learning
