--- a/_posts/2021-01-12-101-Papers.md
+++ b/_posts/2021-01-12-101-Papers.md
@@ -244,3 +244,34 @@ It generates visually similar predictions for simulations of moving fabric, airf
     - Qualitatively it can be seen that the model is good at disentangled different attributes like pose, shape and appearance - changing the pose seems to result in images in which the same object seems to be present only oriented differently whereas the other models also change the appearance of the object and / or have artifacts. 
     - Moreover varying the appearance and shape latents one at a time results in images where the only the appearance or the shape change. 
     - A lower 3D reconstruction loss is further suggestive of multiview consistency. 
+
+## 18. 
+### Basic summary 
+Data augmentation that uses linear inductive bias to input values interpolated between pairs of samples and labels in different classes, which acts as a vicinity distribution that approximates the problem of maximising the log likelihood instead of using ERM. The motivation behind how it works is that linearity is a good inductive bias for Occam's razor. The mixup probability is sampled from $\beta{\alpha, \alpha}$ where $\alpha$ is a hyperparameter. For mixed-up samples a correct prediction for the purposes of accuracy is either of the interpolated classes. Mixup improves baselines (or at least does no worse in a few cases) for CIFAR-10 and 100, ImageNet, Google commands (speech), Tabular data from UCI and also improves robustness to noisy data and adversarial examples. 
+
+### More on ERM
+- You want to minimise the risk of a hypothesis $f$ which is the expected value of the error between $f(x)$, the prediction, and $y$ the true label where the expectation is with respect to the true data distribution $P(x, y)$
+    $$R(f) = \integral{L\left(f(x), y\right)dP(x, y)}$$
+
+- Since you don't know the true data distribution you approximate it via a uniform distribution over the training data $x^{(i)}, y^{(i)}$, consisting of $N$ samples:
+
+    $$\hat{P}(x, y) = \frac{1}{N}\sum{i=1}^{N}\delta(x=x^{(i)})\delta(y=y^{(i)})$$
+
+- This yields the following empirical risk over the training set:
+
+    $$\hat{R}(f) = \frac{1}{N}\sum_{i=1}^{N} L(f(x^{(i)}), y^{(i)})$$
+
+- However we can also use some other approximation to the true distribution for example "Vicinal Risk Minimisation" where we consider the probability of a virtual pair $\tilde{x}, \tilde{y}$ given the training data $x^{(i)}, y^{(i)}$.
+- The one that they propose is as follows:
+
+    $$ \lambda \sim \Beta(\alpha, \alpha)$$
+    $$\tilde{x}^{(i, j)} = \lambda x^{(i)} + (1- \lambda) x^{(j)}$$
+    $$\tilde{y}^{(i, j)} = \lambda y^{(i)} + (1- \lambda) y^{(j)}$$
+    $$\hat{P}(\tilde{x}, \tilde{y} \vert x^{(a)}, y^{(a)}) = \frac{1}{N}\sum_{b=1}^{N}\mathbb{E}_{\lambda}\left[\delta(\tilde{x}=\tilde{x}^{(a, b)})\delta(\tilde{y}=\tilde{y}^{(a, b)})\right]$$
+
+### Results in more detail
+- Bigger models and those trained for longer tend to benefit more from mixup (noted for ImageNet, Google commands) 
+- Large values of $\alpha$ do worse than smaller ones for classification tasks  (noted for ImageNet)
+- Mixup converges at the same rate as ERM (noted for CIFAR-10) to best test error 
+- Mixup with dropout tends to do the best for noisy data
+- For speech mixup is applied to spectrogram but could also be applied to waveform
