--- a/_posts/2021-01-12-101-Papers.md
+++ b/_posts/2021-01-12-101-Papers.md
@@ -245,7 +245,7 @@ It generates visually similar predictions for simulations of moving fabric, airf
     - Moreover varying the appearance and shape latents one at a time results in images where the only the appearance or the shape change. 
     - A lower 3D reconstruction loss is further suggestive of multiview consistency. 
 
-## 18. 
+## 18. [mixup: Beyond Empirical Risk Minimization](https://arxiv.org/abs/1710.09412)
 ### Basic summary 
 Data augmentation that uses linear inductive bias to input values interpolated between pairs of samples and labels in different classes, which acts as a vicinity distribution that approximates the problem of maximising the log likelihood instead of using ERM. The motivation behind how it works is that linearity is a good inductive bias for Occam's razor. The mixup probability is sampled from $\beta{\alpha, \alpha}$ where $\alpha$ is a hyperparameter. For mixed-up samples a correct prediction for the purposes of accuracy is either of the interpolated classes. Mixup improves baselines (or at least does no worse in a few cases) for CIFAR-10 and 100, ImageNet, Google commands (speech), Tabular data from UCI and also improves robustness to noisy data and adversarial examples. 
 
