DONE: another paper

--- a/_posts/2021-01-12-101-Papers.md
+++ b/_posts/2021-01-12-101-Papers.md
@@ -275,3 +275,6 @@ Data augmentation that uses linear inductive bias to input values interpolated b
 - Mixup converges at the same rate as ERM (noted for CIFAR-10) to best test error 
 - Mixup with dropout tends to do the best for noisy data
 - For speech mixup is applied to spectrogram but could also be applied to waveform
+
+## 19. [Deep Networks with Stochastic Depth](https://arxiv.org/abs/1603.09382)
+ResNet models are trained with stochastic depth by deciding according to some probability for each skip connection where or not to use only the identity part thereby dropping this layer. A simple approach is to linearly decrease the probability of keeping the layer based on a hyperparameter $p_{L}$ which is the probability for the final or $L-th$ layer which is used during training whilst during test the layer is scaled by the probability of keeping the layer. This leads to faster training time since the expected number of active layers at each step is lower than the length of the network (~75% using the linear approach) and they suggest that it could alleviate the vanishing gradient problem and diminishing feature reuse (like vanishing gradients but for forward pass whereby features are washed out by repeated multiplication or convolution with randomly initialised weights) by allowing shorter paths to the output from each layer as well as [something else]. They also suggest that this works like an ensemble of networks of different depth where at test time each layer is weighted by the probability that it will be present in a given model. The model does significantly better regular ResNets on CIFAR-10 (which it sustains with a 1000+ layer model whose original configuration fails to do better than a 110 layer model but this model does better than the 110 layer one as well), CIFAR-100, has a slight advantage for SVHN but does not improve on ImageNet.
